--- a/package.json
+++ b/package.json
@@ -9,15 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.0.17",
+    "@prisma/client": "^5.8.1",
+    "@tailwindcss/forms": "^0.5.7",
+    "axios": "^1.6.7",
+    "bcrypt": "^5.1.1",
+    "next": "14.1.0",
+    "next-auth": "^4.24.5",
+    "prisma": "^5.8.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "eslint-config-next": "14.1.0",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0"
   }
 }
