--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb+srv://root:root@app-js-fullstack.8tp1cy8.mongodb.net/next-auth"
+DATABASE_URL="mongodb url required"
 
 SECRET="bdnnfgbfdovnfdndobgaonevbeanvbeaindnzonvoea"
 
